--- a/underscore.html
+++ b/underscore.html
@@ -31,7 +31,13 @@ _.each([1, 2, 3], function (i) {
  }
 
  eles.get( "id" )*/
+function k(){
 
- alert(_.isObject(null))
+var l = constructor.prototype
+console.log( l)
+console.log(constructor.prototype === window.constructor.prototype)
+}
+
+k()
 
 </script>
