--- a/underscore.html
+++ b/underscore.html
@@ -12,11 +12,22 @@
 </body>
 </html>
 <script>
- 
-/*each
-_.each({name1:1, name2:2, name3:3}, function (i) { 
+  function isObject(obj) {
+    var type = typeof obj;
+    console.log(type)
+    return type === 'function' || type === 'object' && !!obj;
+  };
+console.log(isObject(1))
 
-}); */
+function a(){
+  console.log(arguments)
+  _.each(arguments, function (i,index) { 
+    console.log(i)
+  }); 
+ }
+/*_.each(a, function(i,index,collection) { 
+  console.log(index)
+},window)*/
 
 
 
@@ -43,16 +54,5 @@ var arr =_.map([1, 2], function(num,key){
 console.log(arr)*/
 
 
-
-
-   
-var listOfPlays =  {
-    year: 1918, newsroom: "The New York Times",
-    reason: "For its public service in publishing in full so many official reports",
-  }   
-
-
-var arr= _.findWhere(listOfPlays, {newsroom: "The New York Times"})
-console.log(arr)
 
 </script>
