--- a/underscore.html
+++ b/underscore.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-     <script src="underscore.js"></script> 
+     <!-- <script src="underscore.js"></script>  -->
    <!-- <script src="learn-underscore.js"></script> -->   
-   <!-- <script src="m.js"></script>    -->
+   <script src="m.js"></script>   
 </head>
 <body>
     
@@ -40,17 +40,11 @@ function a(){
 
  eles.get( "id" )*/
 
-var ready = _.matcher({selected: true, visible: true});
-//var readyToGoList = _.filter(list, ready);
-console.log(ready)
-
-var arr =_.map({one: 1, two: 2, three: 3} );
-console.log(arr)
-
-
-
-_.contains([1, 2, 3], 3);
-
+/*var arr =_.map({one: 1, two: 2, three: 3},function(i){
+  console.log(i)
+});*/
+var even = _.find([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
+console.log(even)
    
 
 </script>
