--- a/underscore.html
+++ b/underscore.html
@@ -44,7 +44,10 @@ function a(){
   console.log(i)
 });*/
 var even = _.find([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
-console.log(even)
-   
+
+var k =_.every([2, 1, 3, 4], function(i){
+  return i > 1;
+});
+console.log(k)
 
 </script>
