--- a/underscore.html
+++ b/underscore.html
@@ -8,7 +8,6 @@
    <script src="m.js"></script>   
 </head>
 <body>
-    
 </body>
 </html>
 <script>
@@ -43,11 +42,12 @@ function a(){
 /*var arr =_.map({one: 1, two: 2, three: 3},function(i){
   console.log(i)
 });*/
-var even = _.find([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
+/*var even = _.find([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
 
 var k =_.every([2, 1, 3, 4], function(i){
   return i > 1;
-});
-console.log(k)
-
+});*/
+//console.log(_.contains({name: 'box'}, 'box'))
+var stooges = [{name: 'moe', age: 40}, {name: 'larry', age: 50}, {name: 'curly', age: 60}];
+console.log(_.pluck(stooges, 'name'));
 </script>
