--- a/underscore.html
+++ b/underscore.html
@@ -33,11 +33,8 @@
 /*var arr =_.map({one: 1, two: 2, three: 3},function(i){
   console.log(i)
 });*/
-<<<<<<< HEAD
-=======
-/*var even = _.find([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
->>>>>>> ea9fa81201cc8e62650aaa954571872de0ab7c13
 
+/*var even = _.find([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
 
 /*var even = _.find([1, 2, 3, 4, 5, 6], function(num){ return num % 2 == 0; });
 */
@@ -46,14 +43,15 @@
   return i > 1;
 });*/
 
-
-/*
-*/
-console.log(_.some([0, -1,2], function(i){
+/*console.log(_.some([0, -1,2], function(i){
   return i > 1;
-}))
+}))*/
 
 //console.log(_.contains({name: 'box'}, 'box'))
-var stooges = [{name: 'moe', age: 40}, {name: 'larry', age: 50}, {name: 'curly', age: 60}];
+
+/*var result = _.groupBy([1.3, 2.1, 2.4], function(num){ return Math.floor(num);})
+console.log(result)*/
+
+console.log(_.shuffle({name: 3,age:12, to:4}))
 
 </script>
