--- a/underscore.html
+++ b/underscore.html
@@ -51,7 +51,6 @@
 
 /*var result = _.groupBy([1.3, 2.1, 2.4], function(num){ return Math.floor(num);})
 console.log(result)*/
-
-console.log(_.shuffle({name: 3,age:12, to:4}))
+/*console.log(_.shuffle({name: 3,age:12, to:4}))*/
 
 </script>
